MET-6785 review remarks